# data-structures-and-algorithms-practice

./: README.md
part1/alg1/: CMakeLists.txt  main.cpp
part1/alg1.2/: CMakeLists.txt  main.cpp
part1/alg2/: CMakeLists.txt  main.cpp
part1/alg3/: CMakeLists.txt  main.cpp
part1/alg4/: A2.txt  main.cpp
part1/alg5/: main.cpp
part1/alg6/: CMakeLists.txt  Date.cpp  Date.h  Element.cpp  Element.h  List.cpp  List.h  main.cpp
part1/alg7/: CMakeLists.txt  Element.cpp  Element.h  List.cpp  List.h  main.cpp
part2/: .gitignore  CMakeLists.txt  main.cpp
part2/Practice_1/: Ex1.cpp  Ex1.h  Ex2.cpp  Ex2.h  Ex3.cpp  Ex3.h  Pr1.cpp  Pr1.h
part2/Practice_2/: Ex2_1.cpp  Ex2_1.h  Ex2_2.cpp  Ex2_2.h  Ex2_3.cpp  Ex2_3.h  PhoneOwner.cpp  PhoneOwner.h  Practice2.cpp  Practice2.h
part2/Practice_3/: PhoneOwnerExtended.cpp  PhoneOwnerExtended.h  Practice3.cpp  Practice3.h
part2/Practice_3/Exercise/: Ex3_2.cpp  Ex3_2.h  Ex3_3.cpp  Ex3_3.h
part2/Practice_3/Main/: BinFileWithHashTable.cpp  BinFileWithHashTable.h  BinFileWork.cpp  BinFileWork.h  HashTable.cpp  HashTable.h
part2/Practice_4/: PerfectlyBalancedBinaryTree.cpp  PerfectlyBalancedBinaryTree.h  Practice4.cpp  Practice4.h
part2/Practice_5/: PhoneOwnerCut.cpp  PhoneOwnerCut.h  Practice5.cpp  Practice5.h
part2/Practice_5/BinaryTrees/: BinarySearchTree.cpp  BinarySearchTree.h  BinaryTree.cpp  BinaryTree.h  SplayTree.cpp  SplayTree.h
part2/Practice_5/FileWork/: BinFileSearch.cpp  BinFileSearch.h  BinFileWorkCut.cpp  BinFileWorkCut.h
part2/Practice_5/SearchClasses/: HashTableSearch.cpp  HashTableSearch.h
part2/Practice_6/: MatrixGraph.cpp  MatrixGraph.h  Practice6.cpp  Practice6.h
part2/Practice_7/: Practice7.cpp  Practice7.h
