cmake_minimum_required(VERSION 3.26)
project(StructuresAndAlgorithmsForDataProcessing)

set(CMAKE_CXX_STANDARD 17)

add_executable(StructuresAndAlgorithmsForDataProcessing main.cpp
        Practice_1/Pr1.cpp
        Practice_1/Pr1.h
        Practice_1/Ex2.cpp
        Practice_1/Ex2.h
        Practice_1/Ex1.cpp
        Practice_1/Ex1.h
        Practice_1/Ex3.cpp
        Practice_1/Ex3.h
        Practice_2/Practice2.cpp
        Practice_2/Practice2.h
        Practice_2/Ex2_1.cpp
        Practice_2/Ex2_1.h
        Practice_2/PhoneOwner.cpp
        Practice_2/PhoneOwner.h
        Practice_2/Ex2_2.cpp
        Practice_2/Ex2_2.h
        Practice_2/Ex2_3.cpp
        Practice_2/Ex2_3.h
        Practice_3/Practice3.cpp
        Practice_3/Practice3.h
        Practice_3/PhoneOwnerExtended.cpp
        Practice_3/PhoneOwnerExtended.h
        Practice_3/Main/HashTable.cpp
        Practice_3/Main/HashTable.h
        Practice_3/Main/BinFileWithHashTable.cpp
        Practice_3/Main/BinFileWithHashTable.h
        Practice_3/Main/BinFileWork.cpp
        Practice_3/Main/BinFileWork.h
        Practice_3/Exercise/Ex3_2.cpp
        Practice_3/Exercise/Ex3_2.h
        Practice_3/Exercise/Ex3_3.cpp
        Practice_3/Exercise/Ex3_3.h
        Practice_4/Practice4.cpp
        Practice_4/Practice4.h
        Practice_4/PerfectlyBalancedBinaryTree.cpp
        Practice_4/PerfectlyBalancedBinaryTree.h
        Practice_5/Practice5.cpp
        Practice_5/Practice5.h
        Practice_5/PhoneOwnerCut.cpp
        Practice_5/PhoneOwnerCut.h
        Practice_5/BinaryTrees/BinaryTree.cpp
        Practice_5/BinaryTrees/BinaryTree.h
        Practice_5/BinaryTrees/BinarySearchTree.cpp
        Practice_5/BinaryTrees/BinarySearchTree.h
        Practice_5/SearchClasses/HashTableSearch.cpp
        Practice_5/FileWork/BinFileSearch.cpp
        Practice_5/FileWork/BinFileSearch.h
        Practice_5/FileWork/BinFileWorkCut.h
        Practice_5/FileWork/BinFileWorkCut.cpp
        Practice_5/BinaryTrees/SplayTree.cpp
        Practice_5/BinaryTrees/SplayTree.h
        Practice_6/Practice6.cpp
        Practice_6/Practice6.h
        Practice_6/MatrixGraph.cpp
        Practice_6/MatrixGraph.h
        Practice_7/Practice7.cpp
        Practice_7/Practice7.h
)
